Cloudformation.yml
AWSTemplateFormatVersion: 2010-09-09
Parameters:
  EnvironmentName:
    Description: Enter Environment Name. NO CAPS
    Default: vahebi
    Type: String
    AllowedPattern: '[a-z-0-9]*'
  Subnet1:
    Default: subnet-01e3a449
    Description: Select Subnet
    AllowedValues:
      - subnet-01e3a449
    Type: String
  Subnet2:
    Default: subnet-5d4dfc07
    AllowedValues:
      - subnet-5d4dfc07
    Description: Select Subnet
    Type: String
  Subnet3:
    Default: subnet-62423504
    Description: Subnet
    AllowedValues:
      - subnet-62423504
    Type: String
  KeyName:
    Description: Select SSH Key.
    Type: 'AWS::EC2::KeyPair::KeyName'
    Default: MyLoginKey
  AZ1:
    Default: subnet-01e3a449
    Description: Select Subnet
    Type: 'AWS::EC2::Subnet::Id'
  AZ2:
    Default: subnet-5d4dfc07
    Description: Select Subnet
    Type: 'AWS::EC2::Subnet::Id'
  MyFirstVPC:
    Default: vpc-ecc3f98a
    Description: Select VPC.
    Type: 'AWS::EC2::VPC::Id'
Resources:
  asgPRODNginxASG:
    Type: 'AWS::AutoScaling::AutoScalingGroup'
    Properties:
      AutoScalingGroupName: !Sub '${EnvironmentName}-ASG'
      TargetGroupARNs:
        - !Ref ELBV2TGFZ9K
      LaunchConfigurationName: !Ref ASLC29GY9
      DesiredCapacity: 1
      MinSize: 1
      MaxSize: 1
      HealthCheckGracePeriod: 300
      Tags:
        - Key: Name
          Value: !Sub '${EnvironmentName}-PROD-Nginx'
          PropagateAtLaunch: 'true'
      VPCZoneIdentifier:
        - !Ref Subnet1
        - !Ref Subnet2
        - !Ref Subnet3
    Metadata:
      'AWS::CloudFormation::Designer':
        id: 4002e66e-e565-4c6d-9328-3eb2f3001eb1
  s3vahebinginxs3:
    Type: 'AWS::S3::Bucket'
    Properties:
      BucketName: !Sub '${EnvironmentName}-bucket'
      AccessControl: Private
      LifecycleConfiguration:
        Rules:
          - ExpirationInDays: '30'
            Prefix: Glacier
            Id: !Sub '${EnvironmentName}-bucket-LCRule'
            Status: Enabled
            Transitions:
              - TransitionInDays: '15'
                StorageClass: Glacier
      VersioningConfiguration:
        Status: Enabled
    Metadata:
      'AWS::CloudFormation::Designer':
        id: 2e8c79ed-a0d9-446c-8839-5bb347dfd0f6
  EC2I30NTR:
    Type: 'AWS::EC2::Instance'
    Properties:
      KeyName: !Ref KeyName
      LaunchTemplate:
        LaunchTemplateId: lt-0fe5a315510b32767
        Version: 2
      SecurityGroupIds:
        - !Ref EC2SG4C8TQ
        - !Ref EC2SG3AFUT
      InstanceType: t2.micro
      SubnetId: !Ref Subnet1
      Tags:
        - Key: Name
          Value: !Sub '${EnvironmentName}-DEV-Nginx'
    Metadata:
      'AWS::CloudFormation::Designer':
        id: c6870ea7-aab5-407c-b61b-a5fe9184cbb0
  EC2SG3AFUT:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      VpcId: !Ref MyFirstVPC
      GroupDescription: HTTP-SG
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
      SecurityGroupEgress:
        - IpProtocol: -1
          CidrIp: 0.0.0.0/0
      Tags:
        - Key: Name
          Value: !Sub '${EnvironmentName}-HTTP-SG'
    Metadata:
      'AWS::CloudFormation::Designer':
        id: 4e9697ca-7906-4ab3-8cc6-90d4970352b8
  EC2SG4C8TQ:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      GroupDescription: SSH port 22
      SecurityGroupIngress:
        - CidrIp: 172.16.0.0/12
          FromPort: 22
          IpProtocol: tcp
          ToPort: 22
      SecurityGroupEgress:
        - CidrIp: 172.16.0.0/12
          IpProtocol: -1
      VpcId: !Ref MyFirstVPC
      Tags:
        - Key: Name
          Value: !Sub '${EnvironmentName}-SSH-SG'
    Metadata:
      'AWS::CloudFormation::Designer':
        id: 62acfff1-b2a1-45b4-bf8c-6c6f1675ee81
  ELBV2LB1XFPI:
    Type: 'AWS::ElasticLoadBalancingV2::LoadBalancer'
    Properties:
      Name: !Sub '${EnvironmentName}-ALB'
      Scheme: internet-facing
      IpAddressType: ipv4
      Type: application
      Subnets:
        - !Ref AZ1
        - !Ref AZ2
        - !Ref Subnet3
      SecurityGroups:
        - !Ref EC2SG244U0
    Metadata:
      'AWS::CloudFormation::Designer':
        id: f32795eb-2d2e-434b-a9f0-fd9c974122c3
  ELBV2TGFZ9K:
    Type: 'AWS::ElasticLoadBalancingV2::TargetGroup'
    Properties:
      HealthCheckIntervalSeconds: 30
      HealthCheckPath: /
      HealthCheckProtocol: HTTP
      HealthCheckTimeoutSeconds: 5
      HealthyThresholdCount: 5
      Matcher:
        HttpCode: '200'
      Name: !Sub '${EnvironmentName}-ALB-TG'
      Port: 80
      Protocol: HTTP
      TargetType: instance
      UnhealthyThresholdCount: 2
      VpcId: !Ref MyFirstVPC
    Metadata:
      'AWS::CloudFormation::Designer':
        id: 8fd98ae5-c845-4684-9641-f3ff8eb3b710
  EC2SG244U0:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      GroupDescription: ALB-HTTP-SG
      VpcId: !Ref MyFirstVPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
      SecurityGroupEgress:
        - IpProtocol: -1
          CidrIp: 0.0.0.0/0
      Tags:
        - Key: Name
          Value: !Sub '${EnvironmentName}-LB-HTTP-SG'
    Metadata:
      'AWS::CloudFormation::Designer':
        id: 7ce7f538-924a-4b8b-92b3-dab4d529a06a
  ELBV2L4DS6P:
    Type: 'AWS::ElasticLoadBalancingV2::Listener'
    Properties:
      LoadBalancerArn: !Ref ELBV2LB1XFPI
      Port: 80
      Protocol: HTTP
      DefaultActions:
        - Type: forward
          TargetGroupArn: !Ref ELBV2TGFZ9K
    Metadata:
      'AWS::CloudFormation::Designer':
        id: c25c1819-8892-4aa8-93e6-c2ee4185014f
  ASLC29GY9:
    Type: 'AWS::AutoScaling::LaunchConfiguration'
    Properties:
      UserData: !Base64 
        'Fn::Sub':
          - |
            #!/bin/bash
            # Uppdatera Repo
            yum update -y
            # Installera Nginx 1.12
            amazon-linux-extras install nginx1.12 -y
            # Rename index.html>backupindex.html
            mv /usr/share/nginx/html/index.html
            /usr/share/nginx/html/backupindex.html
            # Skapa index.html
            touch /usr/share/nginx/html/index.html
            # Custom index.html
            echo "<html><H1>Mohsen</H1></html>" >
            /usr/share/nginx/html/index.html
            # Installera yum-cron för automatiska updates
            yum install yum-cron -y
            #stresstest
            yum install stress -y
            # Start & Enable
            systemctl enable yum-cron
            #systemctl start yum-cron
            # Enable autoupdates, editera conf
            sed -i 's/apply_updates = no/apply_updates = yes/g'
            /etc/yum/yum-cron.conf
            # Autostarta Nginx
            systemctl enable nginx
            # Restarta Nginx
            systemctl restart nginx
            # Add job to crontab, cp local files to bucket
            echo "*/5 * * * * root aws s3 sync --delete s3://${S3Bucket}
            /usr/share/nginx/html  >> /etc/crontab
            # Restart crontab
            systemctl restart crond
            # END
          - S3Bucket: !GetAtt s3vahebinginxs3.Arn
      ImageId: ami-030dbca661d402413
      BlockDeviceMappings:
        - DeviceName: /dev/xvda
          Ebs:
            VolumeSize: 8
            DeleteOnTermination: true
            SnapshotId: snap-0e2339b3e84c98fcd
            VolumeType: gp2
      EbsOptimized: false
      IamInstanceProfile: EC2-S3ReadAccess
      InstanceMonitoring: false
      InstanceType: t2.micro
      KeyName: !Ref KeyName
      LaunchConfigurationName: !Sub '${EnvironmentName}-ASG-LC'
      SecurityGroups:
        - !Ref EC2SG3AFUT
    Metadata:
      'AWS::CloudFormation::Designer':
        id: d9b37cdc-4d00-4964-ad66-6501fe75d5fe
Metadata:
  'AWS::CloudFormation::Designer':
    7ce7f538-924a-4b8b-92b3-dab4d529a06a:
      size:
        width: 60
        height: 60
      position:
        x: 60
        'y': 90
      z: 1
      embeds: []
    8fd98ae5-c845-4684-9641-f3ff8eb3b710:
      size:
        width: 60
        height: 60
      position:
        x: 180
        'y': 90
      z: 1
      embeds: []
    f32795eb-2d2e-434b-a9f0-fd9c974122c3:
      size:
        width: 60
        height: 60
      position:
        x: 60
        'y': 210
      z: 1
      embeds: []
      isassociatedwith:
        - 7ce7f538-924a-4b8b-92b3-dab4d529a06a
    c25c1819-8892-4aa8-93e6-c2ee4185014f:
      size:
        width: 60
        height: 60
      position:
        x: 180
        'y': 210
      z: 1
      embeds: []
      isassociatedwith:
        - f32795eb-2d2e-434b-a9f0-fd9c974122c3
    62acfff1-b2a1-45b4-bf8c-6c6f1675ee81:
      size:
        width: 60
        height: 60
      position:
        x: 300
        'y': 90
      z: 1
      embeds: []
    4e9697ca-7906-4ab3-8cc6-90d4970352b8:
      size:
        width: 60
        height: 60
      position:
        x: 300
        'y': 210
      z: 1
      embeds: []
    d9b37cdc-4d00-4964-ad66-6501fe75d5fe:
      size:
        width: 60
        height: 60
      position:
        x: 60
        'y': 330
      z: 1
      embeds: []
      isassociatedwith:
        - 4e9697ca-7906-4ab3-8cc6-90d4970352b8
    c6870ea7-aab5-407c-b61b-a5fe9184cbb0:
      size:
        width: 60
        height: 60
      position:
        x: 180
        'y': 330
      z: 1
      embeds: []
      isassociatedwith:
        - 62acfff1-b2a1-45b4-bf8c-6c6f1675ee81
        - 4e9697ca-7906-4ab3-8cc6-90d4970352b8
    2e8c79ed-a0d9-446c-8839-5bb347dfd0f6:
      size:
        width: 60
        height: 60
      position:
        x: 300
        'y': 330
      z: 1
      embeds: []
    4002e66e-e565-4c6d-9328-3eb2f3001eb1:
      size:
        width: 60
        height: 60
      position:
        x: 420
        'y': 90
      z: 1
      embeds: []
      isassociatedwith:
        - d9b37cdc-4d00-4964-ad66-6501fe75d5fe
        - 8fd98ae5-c845-4684-9641-f3ff8eb3b710
